site/assets/styles/_dropdowns.scss
// Dropdown menu styles

// Dropdown menu container
.navbar-nav .dropdown-menu {
  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
  border-radius: 5px;
  border: 1px solid #222425;
}

.dropdown-menu.dropdown-menu-end.show {
  padding-top: 0.5rem; /* Adjust the value as needed */
}

// Dropdown item styles
a.dropdown-item {
  position: relative;
}

a.dropdown-item:hover {
  text-decoration: none;
  color: $validmind-dark-teal;
  background-color: $validmind-bg-hover;
}

a.dropdown-item:before {
  content: "";
  position: absolute;
  display: block;
  width: 100%;
  height: 2px;
  bottom: 0;
  left: 0;
  background-color: #ffffff;
  transform: scaleX(0);
  transition: transform 0.3s ease;
}

a.dropdown-item:not(nav#TOC a.dropdown-item):hover::before {
  transform: scaleX(1);
}

.dropdown-item:active {
  background-color: white;
}

.navbar .dropdown-item {
  padding: .2rem .7rem;
}

// Responsive styles
@media (max-width: 768px) {
  .dropdown-item {
    padding: 0.5rem 1rem;
    font-size: 0.9rem;
  }
  
  .navbar-nav .dropdown-menu {
    width: 100%;
    position: static;
    box-shadow: none;
    border: none;
  }
}

